Fix summary spacing in chrome 97 [revdep skip]

--- a/inst/css/categorization.css
+++ b/inst/css/categorization.css
@@ -24,7 +24,6 @@ div.unstructured-text-main-container .raw-text-category-details {
 div.unstructured-text-main-container .raw-text-category-summary {
     display: list-item;
     font-size: 13px;
-    margin-bottom: 5px;
     color: #333333;
     user-select: none; /* supported by Chrome and Opera */
     -webkit-user-select: none; /* Safari */
